Rename to color circle

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <script>
             const input = document.getElementById('picker');
-            const picker = new ColorWheel({
+            const picker = new ColorCircle({
                 input,
                 // outerDiameter: 400,
                 // innerDiameter: 75,
